--- a/index.html
+++ b/index.html
@@ -79,5 +79,24 @@
         <li><a href="msn.com">http://msn.com</a></li>
       </ul>
     </div>
+
+    <div class="grid">
+      <h2>grid</h2>
+      <div class="grid-container">
+        <img src="./logocss.png" alt="logo.css" height="200px" />
+        <form action="">
+          <input type="text" id="firstname" placeholder="prénom" />
+          <input type="text" id="surname" placeholder="nom" />
+          <textarea
+            name=""
+            id="textarea"
+            cols="30"
+            rows="10"
+            placeholder="votre msg ici"
+          ></textarea>
+          <input type="submit" value="Submit the form" />
+        </form>
+      </div>
+    </div>
   </body>
 </html>
