--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
     <div class="grid">
       <h2>grid</h2>
       <div class="grid-container">
-        <img src="./logocss.png" alt="logo.css" height="200px" />
+        <div class="imgGrid">
+          <img src="./logocss.png" alt="logo.css" height="200px" />
+        </div>
         <form action="">
           <input type="text" id="firstname" placeholder="prénom" />
           <input type="text" id="surname" placeholder="nom" />
