--- a/index2.html
+++ b/index2.html
@@ -11,8 +11,8 @@
     <div class="card">
       <h1>CSS part 2</h1>
       <div class="grid-container">
-        <div class="ploygone-container">
-          <div class="polygone"></div>
+        <div class="ploygon-container">
+          <div class="polygon"></div>
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet at
