--- a/index2.html
+++ b/index2.html
@@ -15,12 +15,12 @@
           <div class="polygon"></div>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet at
-          praesentium corrupti blanditiis perspiciatis? Velit laborum accusamus
-          neque, minima voluptatem, ex cumque, eveniet et illum veniam molestias
-          quo ratione itaque. Quia unde nemo et nam dolore quidem sint
-          exercitationem accusantium, iusto ab incidunt, quod veniam. Deleniti
-          ad animi esse qui.
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam eius
+          placeat quaerat autem inventore doloremque delectus, soluta, quidem
+          dolorem laboriosam repellat neque at illum numquam quis mollitia
+          commodi saepe dignissimos omnis? Ab suscipit placeat animi. Saepe quis
+          reiciendis, modi debitis tenetur odio illo beatae adipisci aut magni
+          et quaerat! Magni.
         </p>
       </div>
 
