--- a/index2.html
+++ b/index2.html
@@ -40,6 +40,7 @@
       </div>
 
       <button>valider</button>
+      <a href="http://www.adelbouatta.com"> WordPress</a>
     </div>
   </body>
 </html>
