--- a/index2.html
+++ b/index2.html
@@ -42,5 +42,7 @@
       <button>valider</button>
       <a href="http://www.adelbouatta.com"> WordPress</a>
     </div>
+
+    <img src="./vaisseau.png" alt="vaisseau spatial" />
   </body>
 </html>
